--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
 <HTML>
-HOLA
+  <head>
+    <style>
+      body{
+       cursor:url(http://www.javascriptkit.com/dhtmltutors/cursor-hand.gif), auto;
+      }
+    </style>
+  </head>
+  <body>
+    HOLA
+    
+   
+  </body>
 </HTML>
