--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     </style>
   </head>
   <body>
-    HOLA
-    
+    Enciclopedia virtual dedicada a la recolección y organización de información sobre la serie Naruto. 
+    Aquí encontraras todo sobre el emocionante franquicia
+    ¡tú puedes ayudarnos a crecer siendo editor!
    
   </body>
 </HTML>
