--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <HTML>
   <head>
+    <title>
+      
     <style>
       body{
-       cursor:url(http://www.javascriptkit.com/dhtmltutors/cursor-hand.gif), auto;
+       cursor:url(https://www.javascriptkit.com/dhtmltutors/cursor-hand.gif), auto;
       }
     </style>
   </head>
   <body>
-    Enciclopedia virtual dedicada a la recolección y organización de información sobre la serie Naruto. 
+    Enciclopedia virtual dedicada a la recolección y organización de información sobre la serie Naruto.<br> 
     Aquí encontraras todo sobre el emocionante franquicia
     ¡tú puedes ayudarnos a crecer siendo editor!
    
