--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       
     <style>
       body{
-       cursor:url(https://www.javascriptkit.com/dhtmltutors/cursor-hand.gif), auto;
+       cursor:url(http://cur.cursors-4u.net/anime/ani-11/ani1037.png), auto;
       }
     </style>
   </head>
