--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    Enciclopedia virtual dedicada a la recolección y organización de información sobre la serie Naruto.<br> 
+    <p>Enciclopedia virtual dedicada a la recolección y organización de información sobre la serie Naruto.</p>
     Aquí encontraras todo sobre el emocionante franquicia
     ¡tú puedes ayudarnos a crecer siendo editor!
    
