--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <HTML>
   <head>
     <title>
-      
+    NAr
+    </title>
     <style>
       body{
        cursor:url(http://cur.cursors-4u.net/anime/ani-11/ani1037.png), auto;
