--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </title>
     <style>
       body{
-       cursor:url(http://cur.cursors-4u.net/anime/ani-11/ani1037.png), auto;
+       cursor:url(http://cur.cursors-4u.net/anime/ani-11/ani1037.png), 100%;
       }
     </style>
   </head>
