--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
     Aquí encontraras todo sobre el emocionante franquicia
     ¡tú puedes ayudarnos a crecer siendo editor!
    
+    <p><a href="https://www.w3schools.com/html/">Historia de la serie</a></p>
+    <p><a href="https://www.w3schools.com/html/">Personajes</a></p>    
+    <p><a href="http://jkanime.net/naruto-shippuden/">Página para ver la serie</a></p>
+    
   </body>
 </HTML>
