--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     Aquí encontraras todo sobre el emocionante franquicia
     ¡tú puedes ayudarnos a crecer siendo editor!
    
-    <a href="https://www.w3schools.com/html/">Historia de la serie</a>
+    <p><a href="https://www.w3schools.com/html/">Historia de la serie</a></p
     <a href="Personajes.html">Personajes</a>    
     <a href="http://jkanime.net/naruto-shippuden/">Página para ver la serie</a>
     
