--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     ¡tú puedes ayudarnos a crecer siendo editor!
    
     <p><a href="https://www.w3schools.com/html/">Historia de la serie</a></p>
-    <a href="Personajes.html">personajes</a>    
+    <a href="personajes.html">Personajes</a>    
     <a href="http://jkanime.net/naruto-shippuden/">Página para ver la serie</a>
     
   </body>
