--- a/personajes.html
+++ b/personajes.html
@@ -1,11 +1,71 @@
 <html>
+    <HTML>
+  <head>
+    <h2>
+    <center>
+        
+        <u>Personajes</u>
+    </center>
+    </h2>
+    <title>
+    Personajes
+    </title>
+    <style>
+      body{
+       cursor:url(http://cur.cursors-4u.net/anime/ani-11/ani1037.png), default;
+      }
+    </style>
+  </head>
 <tr>
 <body>
-
+     <center>
     <u>
     <th>Naruto</th>
     </u>
   </tr>
+    </center>
+    
+      <center>
+    <u>
+    <th>Sasuke</th>
+    </u>
+  </tr>
+    </center>
+      <center>
+    <u>
+    <th>Sakura</th>
+    </u>
+  </tr>
+    </center>
+  <center>
+    <u>
+    <th>Rock Lee</th>
+    </u>
+  </tr>
+    </center>
+  <center>
+    <u>
+    <th>Kakashi Sensei</th>
+    </u>
+  </tr>
+    </center>
+  <center>
+    <u>
+    <th>Gui Sensei</th>
+    </u>
+  </tr>
+    </center>
 </body>
-
+  <center>
+    <u>
+    <th>Shino</th>
+    </u>
+  </tr>
+    </center>
 </html>
+  <center>
+    <u>
+    <th>Hinata</th>
+    </u>
+  </tr>
+    </center>
