--- a/personajes.html
+++ b/personajes.html
@@ -1,4 +1,4 @@
-<html>
+
     <HTML>
   <head>
     <h2>
@@ -38,7 +38,6 @@
   </tr>
     </center>
   <center>
-      </html>
     <u>
     <th>Rock Lee</th>
     </u>
@@ -70,3 +69,4 @@
     </u>
   </tr>
     </center>
+</HTML>
