--- a/personajes.html
+++ b/personajes.html
@@ -56,7 +56,7 @@
           También fue el capitán de la Tercera División de la Gran Alianza Shinobi.
           Después de los acontecimientos de la Cuarta Guerra Mundial Shinobi, 
           Kakashi se convirtió en el Sexto Hokage (六代目火影, Rokudaime Hokage; 
-          que significa "Sexta Sombra del Fuego") de Konoha
+          que significa "Sexta Sombra del Fuego") de Konoha</p>
   </tr>
     </center>
   <center>
