--- a/personajes.html
+++ b/personajes.html
@@ -45,7 +45,8 @@
     </center>
   <center>
     <u>
-    <th>Kakashi Hatake</th>    
+    <th>Kakashi Hatake</th>  
+        <img src="Kakashi_Epílogo.png" alt="Kakashi" width="200" height="200">
     </u>
       <p>Kakashi Hatake (はたけカカシ, Hatake Kakashi) es un shinobi de Konohagakure.
           Fue un Jōnin, ex-ANBU y el líder del Equipo 7. Fue conocido mundialmente 
