--- a/personajes.html
+++ b/personajes.html
@@ -46,7 +46,7 @@
   <center>
     <u>
     <th>Kakashi Hatake</th>  
-        <img src="Kakashi_Epílogo.png" alt="Kakashi" width="200" height="200">
+        <p> <img src="Kakashi_Epílogo.png" alt="Kakashi" width="200" height="200"> </p>
     </u>
       <p>Kakashi Hatake (はたけカカシ, Hatake Kakashi) es un shinobi de Konohagakure.
           Fue un Jōnin, ex-ANBU y el líder del Equipo 7. Fue conocido mundialmente 
