--- a/personajes.html
+++ b/personajes.html
@@ -12,7 +12,7 @@
     </title>
     <style>
       body{
-       cursor:url(http://cur.cursors-4u.net/anime/ani-11/ani1037.png), default;
+       cursor:url(//cur.cursors-4u.net/anime/ani-11/ani1037.png), default;
       }
     </style>
   </head>
