--- a/personajes.html
+++ b/personajes.html
@@ -24,6 +24,17 @@
     </u>
   </tr>
     </center>
+    Naruto Uzumaki (うずまきナルト, Uzumaki Naruto) es el protagonista de la serie del manga y anime Naruto y Naruto Shippūden. 
+    Asimismo es partícipe del manga Boruto: Naruto Nuevas Generaciones secuela canónica de la obra original de Masashi Kishimoto.
+    Es residente de Konohagakure, hijo del Cuarto Hokage, Minato Namikaze y su esposa Kushina Uzumaki, 
+    además de ser la actual Reencarnación de Asura Ōtsutsuki. Desde el día de su nacimiento hasta que le fue extraído por
+    Madara Uchiha fue el Jinchūriki de la mitad Yang de Kurama y el más reciente de la mitad Yin de Kurama. 
+    Finalmente recibiría la mitad extraída de Kurama, unificándose con su otra mitad en el interior de éste.
+    También posee parte del Chakra de las otras Bestias con Cola, convirtiéndose en un Jinchūriki para cada uno de los Bijū
+    y por éstas razones se lo ha nombrado como el Pilar Humano del Poder del Diez Colas.[13] Fue miembro del Equipo Kakashi junto
+    a Sakura Haruno y Sasuke Uchiha. Actualmente es el Séptimo Hokage (七代目火影, Nanadaime Hokage;
+    que significa "Séptima Sombra del Fuego") de Konoha, cumpliendo su sueño, 
+    así como también el esposo de Hinata Hyūga y padre de Boruto Uzumaki y Himawari Uzumaki. 
     
       <center>
     <u>
