--- a/personajes.html
+++ b/personajes.html
@@ -22,6 +22,7 @@
     <u>
     <th>Naruto</th>
     </u>
+         <img src="Naruto_Adultoo.png" alt="Mountain View" width="500" height="377">
   </tr>
     </center>
     Naruto Uzumaki (うずまきナルト, Uzumaki Naruto) es el protagonista de la serie del manga y anime Naruto y Naruto Shippūden. 
