--- a/personajes.html
+++ b/personajes.html
@@ -22,7 +22,7 @@
     <u>
     <th>Naruto</th>
     </u>
-         <img src="Naruto_Adultoo.png" alt="Mountain View" width="500" height="377">
+        <p> <img src="Naruto_Adultoo.png" alt="Naruto" width="200" height="200"></p>
   </tr>
     </center>
     Naruto Uzumaki (うずまきナルト, Uzumaki Naruto) es el protagonista de la serie del manga y anime Naruto y Naruto Shippūden. 
