--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     </style>
   </head>
   <body>
-    <p>Enciclopedia virtual dedicada a la recolección y organización de información sobre la serie Naruto.</p>
+   <p style="background-color:Tomato;">
+LEnciclopedia virtual dedicada a la recolección y organización de información sobre la serie Naruto.
     Aquí encontraras todo sobre el emocionante franquicia
     ¡tú puedes ayudarnos a crecer siendo editor!
-   
+</p> 
     <p><a href="https://www.w3schools.com/html/">Historia de la serie</a></p>
     <p><a href="personajes.html">Personajes</a></p>
     <p><a href="http://jkanime.net/naruto-shippuden/">Página para ver la serie</a></p>
