--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <h2>
     <center>
-    <u>Naruto Shippuden</u>
+    <h1 style="border: 2px solid Tomato;"><u>Naruto Shippuden</u></h1>
     
     </center>
     </h2>
