--- a/index.html
+++ b/index.html
@@ -25,5 +25,28 @@ LEnciclopedia virtual dedicada a la recolección y organización de información
     <p><a href="personajes.html">Personajes</a></p>
     <p><a href="http://jkanime.net/naruto-shippuden/">Página para ver la serie</a></p>
     
+    <a>Influencias Japonesas:</a>
+
+    Las tres habilidades de Itachi, Amaterasu, Tsukuyomi y Susano'o, en la mitología japonesa son tres dioses que gobiernan el
+    Sol, la Luna y el Mar respectivamente, además de ser hermanos.
+    Rock Lee y Might Guy son personajes basados en Bruce Lee.
+    Todas las habilidades del Mangekyō Sharingan estan ligadas con las creencias religiosas japonesas: Amaterasu,
+    Tsukuyomi, Susanoo, Kamui, Kotoamatsukami ; asi como jutsus propios de este como el Kagutsuchi, y habilidades del
+    Sharingan como Izanami e Izanagi también. 
+
+    <a>Información sobre los personajes:</a>
+
+    El personaje favorito de Kishimoto es Naruto ya que si pudiera dividirse en 17 personas con el Jutsu Multiclones de Sombras, 
+    él seria capaz de dibujar mucho mejor el manga de la serie y terminar el capítulo de la serie por hacer solo una pagina.
+    Pero según otra entrevista hecha a Kishimoto Sasuke es también su personaje favorito, aunque a muchos no les agrade,
+    lo confirmó kishimoto en una entrevista ya que él mismo dijo que era el personaje más dificil de dibuja,
+    y por lo tanto era su favorito ya que representaba un reto para él dibujarlo.
+    El símbolo que tiene Gaara en su frente significa "Amor".
+    Hinata le confesó a Naruto que lo amaba.
+    Tsunade le tenía miedo a la sangre.
+    Jiraiya es el padrino de Naruto.
+    Jiraiya, Tsunade y Orochimaru estan basados en tres personajes de una novela del folclore japones, Jiraiya Goketsu Monogatari, donde Orochimaru mata a Tsunade y este causa que Jiraiya termine asesinandolo. 
+
+    
   </body>
 </HTML>
