--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ LEnciclopedia virtual dedicada a la recolección y organización de información
     <p><a href="personajes.html">Personajes</a></p>
     <p><a href="http://jkanime.net/naruto-shippuden/">Página para ver la serie</a></p>
     
-    <p>Influencias Japonesas:</p>
+    <p><u>Influencias Japonesas:</p></u>
 
     Las tres habilidades de Itachi, Amaterasu, Tsukuyomi y Susano'o, en la mitología japonesa son tres dioses que gobiernan el
     Sol, la Luna y el Mar respectivamente, además de ser hermanos.
@@ -34,7 +34,7 @@ LEnciclopedia virtual dedicada a la recolección y organización de información
     Tsukuyomi, Susanoo, Kamui, Kotoamatsukami ; asi como jutsus propios de este como el Kagutsuchi, y habilidades del
     Sharingan como Izanami e Izanagi también. 
 
-    <p>Información sobre los personajes:</p>
+  <u><p>Información sobre los personajes:</u></p>
 
     El personaje favorito de Kishimoto es Naruto ya que si pudiera dividirse en 17 personas con el Jutsu Multiclones de Sombras, 
     él seria capaz de dibujar mucho mejor el manga de la serie y terminar el capítulo de la serie por hacer solo una pagina.
