--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ LEnciclopedia virtual dedicada a la recolección y organización de información
     Aquí encontraras todo sobre el emocionante franquicia
     ¡tú puedes ayudarnos a crecer siendo editor!
 </p> 
-    <p><a href="Historia.html">Historia de la serie</a></p>
+    <p><a href="/Historia.html">Historia de la serie</a></p>
     <p><a href="personajes.html">Personajes</a></p>
     <p><a href="http://jkanime.net/naruto-shippuden/">Página para ver la serie</a></p>
     
