--- a/personajes.html
+++ b/personajes.html
@@ -14,6 +14,10 @@
       body{
        cursor:url(//cur.cursors-4u.net/anime/ani-11/ani1037.png), default;
       }
+        .personal{
+            background:red;
+            font-size:20px;
+        }
     </style>
   </head>
 <tr>
@@ -25,6 +29,7 @@
         <p> <img src="Naruto_Adultoo.png" alt="Naruto" width="200" height="200"></p>
   </tr>
     </center>
+    <p class="pesonal">
     Naruto Uzumaki (うずまきナルト, Uzumaki Naruto) es el protagonista de la serie del manga y anime Naruto y Naruto Shippūden. 
     Asimismo es partícipe del manga Boruto: Naruto Nuevas Generaciones secuela canónica de la obra original de Masashi Kishimoto.
     Es residente de Konohagakure, hijo del Cuarto Hokage, Minato Namikaze y su esposa Kushina Uzumaki, 
@@ -36,7 +41,7 @@
     a Sakura Haruno y Sasuke Uchiha. Actualmente es el Séptimo Hokage (七代目火影, Nanadaime Hokage;
     que significa "Séptima Sombra del Fuego") de Konoha, cumpliendo su sueño, 
     así como también el esposo de Hinata Hyūga y padre de Boruto Uzumaki y Himawari Uzumaki. 
-    
+    </p>
       <center>
     <u>
     <th>Sasuke</th>
